Info text: "Aktuálně hodin nad: krize: 29.8 h | minimum: -0.2 h | optimum: -7.2 h | maximum: -15.2 h"

--- a/common.css
+++ b/common.css
@@ -37,3 +37,12 @@ h1 {
     padding: 10px;
 }
 
+#box-hours-above {
+    margin-bottom: 1em;
+    color: #aaa;
+}
+
+#box-hours-above > span {
+    color: #000;
+}
+
